--- a/AI_reference.tex
+++ b/AI_reference.tex
@@ -4,6 +4,7 @@
 \usepackage{titlesec}
 
 \usepackage{enumitem}
+\setlist{nolistsep}
 \renewcommand\labelenumi{(\theenumi)}
 
 \usepackage{scrextend}% not needed with a KOMA-Script class, provides the
@@ -52,5 +53,6 @@
 
 \input{Chapter_1.tex}
 \input{Chapter_2.tex}
+\input{Chapter_3.tex}
 
 \end{document}
