add table in ch3

--- a/AI_reference.tex
+++ b/AI_reference.tex
@@ -2,6 +2,8 @@
 \usepackage{xeCJK}
 \usepackage{amsmath}
 \usepackage{titlesec}
+\usepackage{booktabs}
+%\usepackage{tabularx}
 
 \usepackage{enumitem}
 \setlist{nolistsep}
