--- a/Chapter_3.tex
+++ b/Chapter_3.tex
@@ -6,19 +6,19 @@
 \begin{solution}
 图搜索的一般过程如下：
 	\begin{enumerate}
-		\item 建立一个只含有起始节点$S$的搜索图$G$，把S放到一个叫做OPEN的未扩展节点表中。
-		\item 建立一个叫CLOSED的已扩展节点表，其初始为空表。
-		\item LOOP：检查OPEN表是否为空，若为空，则失败退出。
-		\item 选择OPEN表上的第一个节点，把它从$OPEN$表移出放进$CLOSED$表。并记该节点为节点$n$。
-		\item 考察节点$n$是否为目标节点。若$n$为一目标节点，则有解并成功退出。此解是追踪图$G$中沿着指针从$n$到$S$这条路径而得到的（指针将在第7步中设置）。
-		\item 扩展节点$n$，生成一组子节点。把这些子节点中不是$n$的祖先的那些后继节点记入集合$M$。把M的这些成员作为$n$的后继节点添入图$G$中。
-		\item 针对M中子节点的不同情况，分别作如下处理：
+		\item 建立一个只含有起始节点$S$的搜索图$G$，把S放到一个叫做OPEN的未扩展节点表中；
+		\item 建立一个叫CLOSED的已扩展节点表，其初始为空表；
+		\item LOOP：检查OPEN表是否为空，若为空，则失败退出；
+		\item 选择OPEN表上的第一个节点，把它从OPEN表移出放进CLOSED表。并记该节点为节点$n$；
+		\item 考察节点$n$是否为目标节点。若$n$为一目标节点，则有解并成功退出。此解是追踪图$G$中沿着指针从$n$到$S$这条路径而得到的（指针将在第7步中设置）；
+		\item 扩展节点$n$，生成一组子节点。把这些子节点中不是$n$的祖先的那些后继节点记入集合$M$。把$M$的这些成员作为$n$的后继节点添入图$G$中；
+		\item 针对$M$中子节点的不同情况，分别作如下处理：
 			\begin{itemize}
-				\item 未曾在$G$中出现过的$M$成员设置一个通向其父节点（即节点$n$）的指针，并把M的这些成员加进OPEN表。（新生成的）
-				\item 对已经在OPEN或CLOSED表上的每一个$M$成员，确定是否需要更改通到其父节点$n$的指针方向。（原生成但未扩展的）
-				\item 对已在CLOSED表上的每个$M$成员，确定是否需要更改图$G$中通向它的每个后裔节点的指针方向。（原生成也扩展过的）
+				\item 未曾在$G$中出现过的$M$成员设置一个通向其父节点（即节点$n$）的指针，并把$M$的这些成员加进OPEN表；（新生成的）
+				\item 对已经在OPEN或CLOSED表上的每一个$M$成员，确定是否需要更改通到其父节点$n$的指针方向；（原生成但未扩展的）
+				\item 对已在CLOSED表上的每个$M$成员，确定是否需要更改图$G$中通向它的每个后裔节点的指针方向；（原生成也扩展过的）
 			\end{itemize}
-		\item 按某一任意方式或按某个探试值，重排OPEN表。
+		\item 按某一任意方式或按某个探试值，重排OPEN表；
 		\item GO LOOP。
 	\end{enumerate} \par
 重排OPEN表意味着什么， 在第(6)步中，将优先扩展哪个节点，不同的排序标准对应着不同的搜索策略。是否重新安排OPEN表，即是否按照某个试探值（或准则、启发信息等）重新对未扩展节点进行排序，将决定该图搜索过程是无信息搜索或启发式搜索。各种搜索策略的主要区别在于对OPEN表中节点的排列顺序不同。例如，广度优先搜索把先生成的子节点排在前面，而深度优先搜索则把后生成的子节点排在前面。\par
@@ -37,7 +37,7 @@
 		\item[盲目搜索] 具有较大的盲目性，产生的无用节点较多，效率不高，耗费过多的计算空间与时间。
 		\item[有序搜索] 利用启发信息，决定哪个是下一步要扩展的节点。选``最有希望''的节点作为下一个被扩展的节点。选择OPEN表上具有最小$f$值的节点作为下一个要扩展的节点, 又称为最佳优先搜索。正确选择估价函数对搜索结果具有决定性的作用。使用不能识别某些节点真实希望的估价函数会形成非最小代价路径；使用一个过多地估计了全部节点希望的估价函数又会扩展过多的节点。 
 		\item[A算法] 虽提高了算法效率，但不能保证找到最优解。
-		\item[A*算法] 搜索效率很大程度上取决于估价函数$h(n)$。一般来说，在满足$h(n)\leq h*(n)$的前提下，$h(n)$的值越大越好。$h(n)$的值越大，说明它携带的启发性信息越多，A*算法搜索时扩展的节点就越少，搜索效率就越高。
+		\item[A*算法] 搜索效率很大程度上取决于估价函数$h(n)$。一般来说，在满足$h(n)\leq h^*(n)$的前提下，$h(n)$的值越大越好。$h(n)$的值越大，说明它携带的启发性信息越多，A*算法搜索时扩展的节点就越少，搜索效率就越高。
 	\end{description}
 
 \end{solution}
@@ -46,18 +46,71 @@
 化为子句型有哪些步骤？请结合例子说明。
 \end{question}	
 \begin{solution}
+任一谓词演算公式可以化成一个子句集。其变换过程由下列九个步骤组成：
+	\begin{enumerate}
+		\item 消去蕴涵符号，将蕴涵符号化为析取和否定符号；
+		\item 减少否定符号的辖域，每个否定符号最多只用到一个谓词符号上，并反复应用狄·摩根定律；
+		\item 对变量标准化，对哑元改名，以保证每个量词有其自己唯一的哑元；
+		\item 消去存在量词，引入Skolem函数，消去存在量词。如果要消去的存在量词不在任何一个全称量词的辖域内，那么我们就用不含变量的Skolem函数即常量；
+		\item 化为前束形，把所有全称量词移到公式的左边，并使每个量词的辖域包括这个量词后面公式的整个部分；
+		\item 把母式化为合取范式， 反复应用分配律，将母式写成许多合取项的合取的形式，而每一个合取项是一些谓词公式和(或)谓词公式的否定的析取；
+		\item 消去全称量词，消去前缀，即消去明显出现的全称量词；
+		\item 消去连词符号（合取），用{合取项1, 合取项2}替换明显出现的合取符号；
+		\item 更换变量名称，更换变量符号的名称，使一个变量符号不出现在一个以上的子句中；
+	\end{enumerate}
 \end{solution}
 
 \begin{question}
 如何通过消解反演求取问题的答案。
 \end{question}	
 \begin{solution}
+给出一个公式集$S$和目标公式$L$，通过反证或反演来求证目标公式$L$，其证明步骤如下： 
+	\begin{enumerate}
+		\item 否定$L$，得$\sim L$； 
+		\item 把$\sim L$添加到$S$中去； 
+		\item 把新产生的集合$\left\{\sim L，S\right\}$化成子句集； 
+		\item 应用消解原理，力图推导出一个表示矛盾的空子句。
+	\end{enumerate}
 \end{solution}
 
 \begin{question}
 什么叫合式公式？合式公式有哪些等价关系？
 \end{question}	
 \begin{solution}
+合式公式的递归定义如下：
+	\begin{enumerate}
+		\item 原子谓词公式是合式公式。
+		\item 若$A$为合式公式，则$\sim A$也是一个合式公式。
+		\item 若$A$、$B$是合式公式，则$A \vee B$，$A \wedge B$、$A \to B$、$A \leftrightarrow B$也都是合式公式。
+		\item 若$A$是合式公式，$x$为$A$中的自由变量，则$\left(\forall x\right) A$和$\left(\exists x\right) A$都是合式公式。
+		\item 运用有限步上述规则(1)至(4)求得的那些公式是是合式公式。
+	\end{enumerate}
+等价关系有：
+	\begin{enumerate}
+		\item 否定之否定：$\sim(\sim P)=P$
+		\item 蕴含与与或形式的等价：$\begin{cases}
+		(P\to Q)=(\sim P \vee Q)\\
+		(\sim P\to Q)=(P \vee Q)
+		\end{cases}$ 
+	\end{enumerate}
+%（1）否定之否定： ~ ( ~ P ) = P
+%（2）蕴含与与或形式的等价：( P  Q ) = ( ~ P  Q ) 
+%( ~ P  Q ) = ( P  Q）
+%（3）狄 • 摩根定律： ~ ( P  Q ) = ~ P  ~ Q
+%~ ( P  Q ) = ~ P  ~ Q
+%（4） 分配律：P  ( Q  R ) = ( P  Q )  ( P  R )
+%P  ( Q  R ) = ( P  Q )  ( P  R )
+%（5） 交换律：P  Q = Q  P
+%P  Q = Q  P
+%（6） 结合律：P  ( Q  R ) = ( P  Q )  R
+%P  ( Q  R ) = ( P  Q )  R
+%（7） 逆否率：( P  Q ) = ( ~ Q  ~ P ) 
+%（8） 否定跨越量词:~ ( x) P(x) = (x) [ ~ P(x) ]
+%                  ~ (x) P(x) = ( x) [ ~ P(x) ]
+%（9）全称量词同与或连词：(x) [ P(x)  Q(x) ] = (x) P(x)  (x) Q(x)
+%                        (x) [ P(x)  Q(x) ] = (x) P(x)  (x) Q(x) 
+%（10）量词中的哑元：(x) P(x) = (y) P(y) 
+%                    ( x) P(x) = ( y) P(y) 
 \end{solution}
 
 \begin{question}
@@ -94,6 +147,40 @@
 规则演绎系统和产生式系统有哪几种推理方式？各自的特点为是什么？
 \end{question}
 \begin{solution}
+
+	\begin{table}[htbp]
+	\centering
+	\begin{tabular}{p{80pt}p{90pt}p{90pt}}
+		\toprule
+		~ & 正向推理 & 逆向推理 \\
+		\midrule
+		推理方向 & 从if部分向then部分推理的过程，它是从事实或状况向目标或动作进行操作的 & 从then部分向if部分推理的过程，它是从目标或动作向事实或状况进行操作的 \\
+		\midrule
+		目标表达式 & 文字的析取 & 任意形式 \\
+		\midrule
+		事实表达式 & 任意形式 & 文字的合取 \\
+		\bottomrule
+	\end{tabular}
+	\end{table} 
+	
+	\begin{table}[htbp]
+	\centering
+	\begin{tabular}{p{80pt}p{80pt}p{80pt}}
+		\toprule
+		~ & 正向推理 & 逆向推理 \\
+		\midrule
+		驱动方式 & 数据驱动 & 目标驱动 \\
+		推理方法 & 从一组数据出发向前推到结论 & 从可能的解答出发，向后推理验证解答 \\
+		启动方法 & 从一个事件启动 & 由询问关于目标状态的一个问题而启动 \\
+		透明程度 & 不能解释其推理过程 & 可解释其推理过程 \\
+		推理方向 & 由底向上推理 & 由顶向下推理 \\
+		优点 & 算法简单、容易实现，允许用户一开始就把有关的事实数据存入数据库，在执行过程中系统能很快获得这些数据，而不必等到系统需要数据时才向用户询问 & 搜索目的性强，推理效率高 \\
+		缺点 & 盲目搜索，可能会求解许多与总目标无关的子目标，每当总数据库内容更新后都要遍历整个规则库，推理效率较低 & 目标的选择具有盲目性，可能会求解许多假的目标；当可能的结论数目很多，即目标空间很大时，推理效率不高；当规则的右部是执行某种动作不是结论时，逆向推理不便使用 \\
+		适用场合 & 主要用于已知初始数据，而无法提供推理目标，或解空间很大的一类问题，如监控、预测、规划、设计等问题的求解 & 主要用于结论单一或者已知目标结论，而要求验证的系统，如选择、分类、故障诊断等问题的求解 \\
+		典型系统 & CLIPS，OPS & PROLOG \\
+		\bottomrule
+	\end{tabular}
+	\end{table}
 \end{solution}
 
 \begin{question}
