add ch5 questions

--- a/AI_reference.tex
+++ b/AI_reference.tex
@@ -3,7 +3,7 @@
 \usepackage{amsmath}
 \usepackage{titlesec}
 \usepackage{booktabs}
-%\usepackage{tabularx}
+\usepackage{tabulary}
 
 \usepackage{enumitem}
 \setlist{nolistsep}
@@ -56,5 +56,7 @@
 \input{Chapter_1.tex}
 \input{Chapter_2.tex}
 \input{Chapter_3.tex}
+\input{Chapter_4.tex}
+\input{Chapter_5.tex}
 
 \end{document}
