--- a/AI_reference.tex
+++ b/AI_reference.tex
@@ -23,7 +23,6 @@
 \SetupExSheets{
   headings = mylist , % use the new headings instance
   headings-format = \normalfont ,
-  %counter-format = \thechapter.qu ,
   counter-within = section ,
   solution/print = true
 }
@@ -58,5 +57,6 @@
 \input{Chapter_3.tex}
 \input{Chapter_4.tex}
 \input{Chapter_5.tex}
+\input{Chapter_6.tex}
 
 \end{document}
