--- a/Chapter_1.tex
+++ b/Chapter_1.tex
@@ -4,8 +4,8 @@
 什么是人工智能？试从学科和能力两方面加以说明。
 \end{question}	
 \begin{solution}
-人工智能（学科）：人工智能（学科）是计算机科学中涉及研究、设计和应用智能机器的一个分支。其近期主要目标在于研究用机器来模仿和执行人脑的某些智力功能，并开发相关理论和技术。\par
-人工智能（能力）：人工智能（能力）是智能机器所执行的通常与人类智能有关的智能行为，这些智能行为涉及学习、感知、思考、理解、识别、判断、推理、证明、通信、设计、规划、行动和问题求解等活动。
+人工智能（学科）是计算机科学中涉及研究、设计和应用智能机器的一个分支。其近期主要目标在于研究用机器来模仿和执行人脑的某些智力功能，并开发相关理论和技术。\par
+人工智能（能力）是智能机器所执行的通常与人类智能有关的智能行为，这些智能行为涉及学习、感知、思考、理解、识别、判断、推理、证明、通信、设计、规划、行动和问题求解等活动。
 \end{solution}
 
 \begin{question}
@@ -24,6 +24,7 @@
 在过去的20年中，人工智能发生了什么变化？
 \end{question}
 \begin{solution}
+传统人工智能（AI）的数学计算体系仍不够严格和完整。除了模糊计算外，近年来，许多模仿人脑思维、自然特征和生物行为的计算方法（如神经计算、进化计算、自然计算、免疫计算和群计算等）已被引入人工智能学科。我们把这些有别于传统人工智能的智能计算理论和方法称为计算智能（Computational Intelligence，CI）。计算智能弥补了传统人工智能的理论框架，使人工智能进入一个新的发展时期。人工智能不同观点、方法和技术的集成，是人工智能发展所必需，也是人工智能发展的必然。
 \end{solution}
 
 \begin{question}
@@ -44,9 +45,9 @@
 现在人工智能有哪些学派？它们的认知观是什么？现在这些学派的关系如何？
 \end{question}
 \begin{solution}
-符号主义(Symbolicism)，又称为逻辑主义(Logicism)、心理学派(Psychlogism)或计算机学派(Computerism)，认为人工智能源于数理逻辑。 其原理主要为物理符号系统(即符号操作系统)假设和有限合理性原理。符号主义认为人的认知基元是符号，而且认知过程即符号操作过程。它认为人是一个物理符号系统，计算机也是一个物理符号系统，因此，我们就能够用计算机来模拟人的智能行为。它还认为，知识是信息的一种形式，是构成智能的基础。人工智能的核心问题是知识表示、知识推理和知识运用。 符号主义认为人工智能的研究方法应为功能模拟方法。通过分析人类认知系统所具备的功能和技能，然后用计算机模拟这些功能，实现人工智能。\par
-连接主义(Connectionism)，又称为仿生学派(Bionicsism)或生理学派(Physiologism) ，认为人工智能源于仿生学，特别是人脑模型的研究。其原理主要为神经网络及神经网络间的连接机制与学习算法。连接主义认为人的思维基元是神经元，而不是符号处理过程。认为人脑不同于电脑，并提出联结主义的大脑工作模式，用于取代符号操作的电脑工作模式。 连接主义主张人工智能应着重于结构模拟，即模拟人的胜利神经网络结构，并认为功能、结构和智能行为是密切相关的。不同的结构表现出不同的功能和行为。\par
-行为主义(Actionism)，又称进化主义(Evolutionism)或控制论学派(Cyberneticsism)， 认为人工智能源于控制论。其原理为控制论及感知-动作型控制系统 。行为主义认为智能取决于感知和行动，提出智能行为的“感知-动作”模式。认为智能不需要知识、不需要表示、不需要推理；人工智能可以像人类智能一样逐步进化。智能行为只能在现实世界中与周围环境交互作用而表现出来。行为主义还认为：符号主义、联结主义对真实世界客观事物的描述及其智能行为工作模式是过于简化的抽象，因而是不能真实地反映客观存在的。 行为主义认为人工智能的研究方法应采用行为模拟方法，也认为功能、结构和智能行为是不可分的。不同行为表现出不同功能和不同控制结构。
+符号主义（Symbolicism），又称为逻辑主义（Logicism）、心理学派（Psychlogism）或计算机学派（Computerism），认为人工智能源于数理逻辑。 其原理主要为物理符号系统（即符号操作系统）假设和有限合理性原理。符号主义认为人的认知基元是符号，而且认知过程即符号操作过程。它认为人是一个物理符号系统，计算机也是一个物理符号系统，因此，我们就能够用计算机来模拟人的智能行为。它还认为，知识是信息的一种形式，是构成智能的基础。人工智能的核心问题是知识表示、知识推理和知识运用。 符号主义认为人工智能的研究方法应为功能模拟方法。通过分析人类认知系统所具备的功能和技能，然后用计算机模拟这些功能，实现人工智能。\par
+连接主义（Connectionism），又称为仿生学派（Bionicsism）或生理学派（Physiologism） ，认为人工智能源于仿生学，特别是人脑模型的研究。其原理主要为神经网络及神经网络间的连接机制与学习算法。连接主义认为人的思维基元是神经元，而不是符号处理过程。认为人脑不同于电脑，并提出联结主义的大脑工作模式，用于取代符号操作的电脑工作模式。 连接主义主张人工智能应着重于结构模拟，即模拟人的胜利神经网络结构，并认为功能、结构和智能行为是密切相关的。不同的结构表现出不同的功能和行为。\par
+行为主义（Actionism），又称进化主义（Evolutionism）或控制论学派（Cyberneticsism）， 认为人工智能源于控制论。其原理为控制论及感知-动作型控制系统 。行为主义认为智能取决于感知和行动，提出智能行为的“感知-动作”模式。认为智能不需要知识、不需要表示、不需要推理；人工智能可以像人类智能一样逐步进化。智能行为只能在现实世界中与周围环境交互作用而表现出来。行为主义还认为：符号主义、联结主义对真实世界客观事物的描述及其智能行为工作模式是过于简化的抽象，因而是不能真实地反映客观存在的。 行为主义认为人工智能的研究方法应采用行为模拟方法，也认为功能、结构和智能行为是不可分的。不同行为表现出不同功能和不同控制结构。
 \end{solution}
 
 \begin{question}
@@ -93,5 +94,3 @@
 \begin{question}
 你对人工智能课程教学有何意见和建议？
 \end{question}
-\begin{solution}
-\end{solution}
