--- a/Chapter_5.tex
+++ b/Chapter_5.tex
@@ -94,6 +94,17 @@
 试述遗传算法的基本原理，并说明遗传算法的求解步骤。
 \end{question}
 \begin{solution}
+遗传算法的基本原理是，通过随机方式产生若干个所求解问题的数字编码，即染色体，形成初始种群；通过适应度函给每个个体一个数值评价，淘汰低适应度的个体，选择高适应度的个体参加遗传操作，经过遗传操作后的个体集合形成下一代新的种群。再对这个新的种群进行下一轮的进化。\par
+遗传算法的求解步骤：\par
+	\begin{enumerate}
+		\item 初始化种群；
+		\item 计算种群上每个个体的适应度值；
+		\item 按由个体适应度值所决定的某个规则选择将进入下一代的个体；
+		\item 按概率Pc进行交叉操作；
+		\item 按概率Pc进行变异操作；
+		\item 若没有满足某中停止条件，则转(2)，否则进入下一步；
+		\item 输出中群中适应度最优的染色体作为问题的满意解或最优解。
+	\end{enumerate}
 \end{solution}
 
 \begin{question}
