--- a/Chapter_6.tex
+++ b/Chapter_6.tex
@@ -75,13 +75,9 @@
 基于规则的专家系统是如何工作的？其结构为何？
 \end{question}
 \begin{solution}
-\end{solution}
 如图××，系统的主要部分是知识库和推理引擎。\par
 知识库由谓词演算事实和有关讨论主题的规则构成。"知识工程师"与应用领域的专家共同工作以便把专家的相关知识表示成一种形式，由一个知识采集子系统协助，输入到知识库。 推理引擎由所有操纵知识库来演绎用户要求的信息的过程构成-如消解、前向链或反向链。 用户接口可能包括某种自然语言处理系统，它允许用户用一个有限的自然语言形式与系统交互。也可是用带有菜单的图形接口界面。\par
 解释子系统分析被系统执行的推理结构，并把它解释给用户。
-\begin{question}
-\end{question}
-\begin{solution}
 \end{solution}
 
 \begin{question}
@@ -138,7 +134,7 @@
 \end{question}
 \begin{solution}
 	\begin{description}
-		\item[新型专家系统的特征] 如下：
+		\item[新型专家系统的特征] \quad
 			\begin{enumerate}
 				\item 并行与分布处理
 				\item 多专家系统协同工作
@@ -163,6 +159,7 @@
 在设计专家系统时，应考虑哪些技术？
 \end{question}
 \begin{solution}
+在设计专家系统时应考虑如下技术：
 	\begin{enumerate}
 		\item 具有可靠知识与数据的小搜索空间问题 \par
 		数据可靠(无噪声、无错误、不丢失、不多余)和知识可靠(不出现假的、近似的或推测性的结论)，决定了系统具有单调性并可采用单路推理路线。而小搜索空间的问题一般允许采用穷举搜索策略。 
