--- a/Chapter_3.tex
+++ b/Chapter_3.tex
@@ -56,7 +56,7 @@
 		\item 把母式化为合取范式， 反复应用分配律，将母式写成许多合取项的合取的形式，而每一个合取项是一些谓词公式和(或)谓词公式的否定的析取；
 		\item 消去全称量词，消去前缀，即消去明显出现的全称量词；
 		\item 消去连词符号（合取），用{合取项1, 合取项2}替换明显出现的合取符号；
-		\item 更换变量名称，更换变量符号的名称，使一个变量符号不出现在一个以上的子句中；
+		\item 更换变量名称，更换变量符号的名称，使一个变量符号不出现在一个以上的子句中。
 	\end{enumerate}
 \end{solution}
 
@@ -68,7 +68,7 @@
 	\begin{enumerate}
 		\item 否定$L$，得$\sim L$； 
 		\item 把$\sim L$添加到$S$中去； 
-		\item 把新产生的集合$\left\{\sim L，S\right\}$化成子句集； 
+		\item 把新产生的集合$\left\{\sim L, S\right\}$化成子句集； 
 		\item 应用消解原理，力图推导出一个表示矛盾的空子句。
 	\end{enumerate}
 \end{solution}
