--- a/Chapter_3.tex
+++ b/Chapter_3.tex
@@ -122,13 +122,23 @@
 \end{solution}
 
 \begin{question}
-用宽度优先搜索求××所示迷宫的出路。
+用宽度优先搜索求图\ref{Fig:maze}所示迷宫的出路。
+	\begin{figure}[h]
+		\centering
+		\includegraphics{figures/ques-3.6.pdf}
+		\caption{迷宫一例} \label{Fig:maze}
+	\end{figure}
 \end{question}
 \begin{solution}
 \end{solution}
 
 \begin{question}
-用有界深度优先搜索方法求解××所示八数码难题。
+用有界深度优先搜索方法求解图\ref{Fig:8-code}所示八数码难题。
+	\begin{figure}[h]
+		\centering
+		\includegraphics{figures/ques-3.7.pdf}
+		\caption{八数码难题} \label{Fig:8-code}
+	\end{figure}
 \end{question}
 \begin{solution}
 \end{solution}
