--- a/Chapter_2.tex
+++ b/Chapter_2.tex
@@ -11,26 +11,46 @@
 \end{solution}
 
 \begin{question}
-设有3个传教士和3个野人来到河边，打算成一条船从右岸渡到左岸去。该船的负载能力为两人。在任何时候，如果野人人数超过传教士人数，那么野人就会把传教士吃掉。怎样才能用这条船安全地把所有人都渡过河去？
+设有$3$个传教士和$3$个野人来到河边，打算成一条船从右岸渡到左岸去。该船的负载能力为两人。在任何时候，如果野人人数超过传教士人数，那么野人就会把传教士吃掉。怎样才能用这条船安全地把所有人都渡过河去？
 \end{question}
 \begin{solution}
+设$(m,n)$表示右岸上有$m$个野人，$n$个传教士；$r(m,n)$表示把$m$个野人和$n$个传教士从右岸运至左岸，$l(m,n)$表示把$m$个野人和$n$个传教士从左岸运至右岸。则安全把所有人渡过河的过程表示为
+\begin{align*}
+(3,3) & \xrightarrow{r(2,0)} (1,3) \xrightarrow{l(1,0)} (2,3) \\
+	& \xrightarrow{r(2,0)} (0,3) \xrightarrow{l(1,0)} (1,3) \\
+	& \xrightarrow{r(0,2)} (1,1) \xrightarrow{l(1,1)} (2,2) \\
+	& \xrightarrow{r(0,2)} (2,0) \xrightarrow{l(1,0)} (0,0) \\
+	& \xrightarrow{r(2,0)} (0,0)
+\end{align*}
 \end{solution}
 
 \begin{question}
-利用××，用状态空间法规划一个最短的旅行路程：此旅程从城市A开始，访问其他城市不多于一次，并返回A。选择一个状态表示，表示出所求得的状态空间的节点及弧线，标出适当的代价，并指明图中从起始节点到目标节点的最佳路径。
-\end{question}
-\begin{solution}
-\end{solution}
-
-\begin{question}
-试说明怎样把一棵与或解树用来表达图\ref{Fig:elec}所示的电网络阻抗的计算。单独的$R$、$L$或$C$可分别用$R$、$j\omega L$或$1/j\omega C$来计算，这个事实用作本原问题。后继算符应以复合并联和串联阻抗的规则为基础。
+利用图\ref{Fig:TSP-problem}，用状态空间法规划一个最短的旅行路程：此旅程从城市A开始，访问其他城市不多于一次，并返回A。选择一个状态表示，表示出所求得的状态空间的节点及弧线，标出适当的代价，并指明图中从起始节点到目标节点的最佳路径。
 	\begin{figure}[h]
 		\centering
-		\includegraphics{ques-2.4.pdf}
+		\includegraphics{figures/ques-2.3.pdf}
+		\caption{旅行商问题} \label{Fig:TSP-problem}
+	\end{figure}
+\end{question}
+\begin{solution}
+用状态空间法表示所求路径如图所示。
+\end{solution}
+
+\begin{question}
+试说明怎样用一棵与或解树来表达图\ref{Fig:elec}所示的电网络阻抗的计算。单独的$R$、$L$或$C$可分别用$R$、$j\omega L$或$1/j\omega C$来计算，这个事实用作本原问题。后继算符应以复合并联和串联阻抗的规则为基础。
+	\begin{figure}[h]
+		\centering
+		\includegraphics{figures/ques-2.4.pdf}
 		\caption{电网络阻抗计算} \label{Fig:elec}
 	\end{figure}
 \end{question}
 \begin{solution}
+约定，用原来的与后继算法用来表达并联关系，用原来的或后继算法用来表达串联关系。则所求与或解树如图\ref{Fig:and-or-tree-for-elec}所示。
+	\begin{figure}[h]
+		\centering
+		\includegraphics{figures/ans-2.4.pdf}
+		\caption{所求与或解树} \label{Fig:and-or-tree-for-elec}
+	\end{figure}
 \end{solution}
 
 \begin{question}
