--- a/AI_reference.tex
+++ b/AI_reference.tex
@@ -1,4 +1,4 @@
-\documentclass{ctexbook}
+\documentclass[openany]{ctexbook}
 \usepackage{xeCJK}
 \usepackage{amsmath}
 \usepackage{titlesec}
@@ -6,6 +6,9 @@
 \usepackage{tabulary}
 \usepackage[multidot]{grffile}
 \usepackage{graphicx}
+\usepackage{float}
+\usepackage{forest}
+\usepackage{tikz}
 
 \usepackage{enumitem}
 \setlist{nolistsep}
