--- a/Chapter_1.tex
+++ b/Chapter_1.tex
@@ -81,6 +81,13 @@
 人工智能的基本研究方法有哪几类？它们与人工智能学派的关系如何？
 \end{question}
 \begin{solution}
+主要有以下四类：
+	\begin{enumerate}
+		\item 功能模拟法。符号主义学派也可称为功能模拟学派。
+		\item 结构模拟法。连接主义学派也可称为结构模拟学派。
+		\item 行为模拟法。行为主义学派也可称为行为模拟学派。
+		\item 集成模拟法。集成主义学派也可称为集成模拟学派。
+	\end{enumerate}
 \end{solution}
 
 \begin{question}
