--- a/Chapter_6.tex
+++ b/Chapter_6.tex
@@ -31,6 +31,7 @@
 专家系统由哪些部分构成？各部分的作用为何？
 \end{question}
 \begin{solution}
+专家系统一般由以下5个部分组成：
 	\begin{enumerate}
 		\item 知识库（knowledge base）\par
 		知识库用于存储某领域专家系统的专门知识，包括事实、可行操作与规则等。 
@@ -51,11 +52,11 @@
 \begin{solution}
 是否拥有大量知识是专家系统成功与否的关键，因而知识表示就成为设计专家系统的关键。
 	\begin{enumerate}
-		\item 设计初始知识库 
+		\item 设计初始知识库 \par
 		问题知识化, 知识概念化, 概念形式化, 形式规则化, 规则合法化。
-		\item 原型机（prototype）的开发与试验 
+		\item 原型机（prototype）的开发与试验 \par
 		建立整个系统所需要的实验子集，它包括整个模型的典型知识，而且只涉及与试验有关的足够简单的任务和推理过程。
-		\item 知识库的改进与归纳 
+		\item 知识库的改进与归纳 \par
 		反复对知识库及推理规则进行改进试验，归纳出更完善的结果。
 	\end{enumerate}
 \end{solution}
@@ -75,9 +76,18 @@
 基于规则的专家系统是如何工作的？其结构为何？
 \end{question}
 \begin{solution}
-如图××，系统的主要部分是知识库和推理引擎。\par
-知识库由谓词演算事实和有关讨论主题的规则构成。"知识工程师"与应用领域的专家共同工作以便把专家的相关知识表示成一种形式，由一个知识采集子系统协助，输入到知识库。 推理引擎由所有操纵知识库来演绎用户要求的信息的过程构成-如消解、前向链或反向链。 用户接口可能包括某种自然语言处理系统，它允许用户用一个有限的自然语言形式与系统交互。也可是用带有菜单的图形接口界面。\par
-解释子系统分析被系统执行的推理结构，并把它解释给用户。
+	\begin{figure}[h]
+		\centering
+		\includegraphics{figures/ans-6.6.pdf}
+		\caption{基于规则的专家系统} \label{Fig:RES-structure}
+	\end{figure}
+基于规则的专家系统结构如图\ref{Fig:RES-structure}。主要由以下几部分组成：\par
+	\begin{enumerate}
+	\item 知识库。由谓词演算事实和有关讨论主题的规则构成。"知识工程师"与应用领域的专家共同工作以便把专家的相关知识表示成一种形式，由一个知识采集子系统协助，输入到知识库。\par
+	\item 推理机。由所有操纵知识库来演绎用户要求的信息的过程构成——如消解、前向链或反向链。\par
+	\item 用户界面。可能包括某种自然语言处理系统，它允许用户用一个有限的自然语言形式与系统交互。也可是用带有菜单的图形接口界面。\par
+	\item 解释器。分析被系统执行的推理结构，并把它解释给用户。
+	\end{enumerate}
 \end{solution}
 
 \begin{question}
@@ -114,40 +124,48 @@
 \begin{solution}
 有一种关于人工智能的观点认为：人工智能是对各种定性模型的获得、表达及使用的计算方法进行研究的学问。根据这一观点，一个知识系统中的知识库是由各种模型综合而成的，而这些模型又往往是定性的模型。 \par
 采用各种定性模型来设计专家系统，一方面它增加了系统的功能，提高了性能指标，另一方面，可独立地深入研究各种模型及其相关问题，把获得的结果用于改进系统设计。
-神经网络专家系统的一般结构如图××。
+神经网络专家系统的一般结构如图\ref{Fig:NNES-structure}。
+	\begin{figure}[h]
+		\centering
+		\includegraphics{figures/ans-6.7.pdf}
+		\caption{神经网络专家系统} \label{Fig:NNES-structure}
+	\end{figure}
 \end{solution}
 
 \begin{question}
 为什么要提出基于Web的专家系统？试述基于Web的专家系统的一般结构。
 \end{question}
 \begin{solution}
+随着互联网技术的发展，Web逐步成为大多数软件用户的交互接口，软件逐步走向网络化，体现为Web服务。因此专家系统的发展也离不开这个趋势，专家系统的用户界面已经逐步向Web靠拢，专家系统的知识库和推理机也都逐步与Web借口交互起来。\par 
+基于Web的专家系统的结构将人机交互定位在Internet层次，专家、知识工程师和普通用户通过浏览器可访问专家系统应用服务器，将问题传递给Web推理机，然后Web推理机通过后台数据库服务器对数据库和知识库进行存取，来推导出一些结论，然后将这些结论告诉用户。由此，基于Web专家系统的结构主要分为3个层次：浏览器、应用逻辑层和数据库层。
 \end{solution}
 
 \begin{question}
 举例介绍一个基于Web的专家系统。
 \end{question}
 \begin{solution}
+基于Web的专家系统的一个例子是基于Web的拖网绞机专家系统。该系统采用C/S的网络结构模型，从总体功能来看，个客户端都只能完成整个拖网绞机专家系统的部分功能，各客户端之间相互协同工作起来完成全局的系统设计。在该系统中，Web服务器处于核心地位，协作任务的协调、管理和技术支持。而客户端通过网络与服务器连接，即可了解最新的设计信息，向服务器传递自己的成果，参加各种非实时的协作；客户端也可利用透明设计平台进行客户端之间的并行协作设计。
 \end{solution}
 
 \begin{question}
 新型专家系统有何特征？什么是分布式专家系统和协同式专家系统？ 
 \end{question}
 \begin{solution}
+新型专家系统有以下一些特征：
+	\begin{enumerate}
+		\item 并行与分布处理
+		\item 多专家系统协同工作
+		\item 高级语言和知识语言描述 \par
+		知识工程师只需用一种高级专家系统描述语言对系统进行功能、性能及接口描述，并用知识表示语言描述领域知识，专家系统生成系统就能自动或半自动地生生所需的专家系统。
+		\item 具有自学习功能 \par
+		具有高级的知识获取与学习功能 
+		\item 引入新的推理机制 \par
+		除了能进行演绎推理之外，还有归纳推理(联想、类比)、非标准逻辑推理(非单调逻辑推理、加权逻辑推理)及各种基于不完全知识和模糊知识的推理。
+		\item 具有自纠错和自完善能力 
+		\item 进的智能人机接口 \par
+		理解自然语言，实现语声、文字、图形和图像的直接输入输出是如今人们对智能计算机提出的要求。 
+	\end{enumerate}
 	\begin{description}
-		\item[新型专家系统的特征] \quad
-			\begin{enumerate}
-				\item 并行与分布处理
-				\item 多专家系统协同工作
-				\item 高级语言和知识语言描述 \par
-				知识工程师只需用一种高级专家系统描述语言对系统进行功能、性能及接口描述，并用知识表示语言描述领域知识，专家系统生成系统就能自动或半自动地生生所需的专家系统。
-				\item 具有自学习功能 \par
-				具有高级的知识获取与学习功能 
-				\item 引入新的推理机制 \par
-				除了能进行演绎推理之外，还有归纳推理(联想、类比)、非标准逻辑推理(非单调逻辑推理、加权逻辑推理)及各种基于不完全知识和模糊知识的推理。
-				\item 具有自纠错和自完善能力 
-				\item 进的智能人机接口 \par
-				理解自然语言，实现语声、文字、图形和图像的直接输入输出是如今人们对智能计算机提出的要求。 
-			\end{enumerate}
 		\item[分布式专家系统]
 		具有分布处理的特征，能把一个专家系统的功能经分解以后分布到多个处理器上去并行地工作，从而有总体上提高系统的处理效率。它可以工作在紧耦合的多处理器系统环境中，也可工作在松耦合的计算机网络环境中，其总体结构在很大程度上依赖于其所在的硬件环境。 
 		\item[协同式专家系统]
