--- a/Chapter_2.tex
+++ b/Chapter_2.tex
@@ -16,10 +16,10 @@
 \begin{solution}
 设$(m,n)$表示右岸上有$m$个野人，$n$个传教士；$r(m,n)$表示把$m$个野人和$n$个传教士从右岸运至左岸，$l(m,n)$表示把$m$个野人和$n$个传教士从左岸运至右岸。则安全把所有人渡过河的过程表示为
 \begin{align*}
-(3,3) & \xrightarrow{r(2,0)} (1,3) \xrightarrow{l(1,0)} (2,3) \\
-	& \xrightarrow{r(2,0)} (0,3) \xrightarrow{l(1,0)} (1,3) \\
-	& \xrightarrow{r(0,2)} (1,1) \xrightarrow{l(1,1)} (2,2) \\
-	& \xrightarrow{r(0,2)} (2,0) \xrightarrow{l(1,0)} (0,0) \\
+(3,3) & \xrightarrow{r(2,0)} (1,3) \xrightarrow{l(1,0)} (2,3) 
+		\xrightarrow{r(2,0)} (0,3) \xrightarrow{l(1,0)} (1,3) \\
+	& \xrightarrow{r(0,2)} (1,1) \xrightarrow{l(1,1)} (2,2) 
+		\xrightarrow{r(0,2)} (2,0) \xrightarrow{l(1,0)} (0,0) \\
 	& \xrightarrow{r(2,0)} (0,0)
 \end{align*}
 \end{solution}
@@ -33,12 +33,54 @@
 	\end{figure}
 \end{question}
 \begin{solution}
-用状态空间法表示所求路径如图所示。
+用状态空间法表示所求路径如图\ref{Fig:TSP-answer}所示。
+	\begin{figure} [h]
+		\centering
+		\begin{forest}
+		  for tree={
+		    draw,
+		    circle,
+		  },
+		  [A
+		  	[B, edge label={node[midway,left,font=\scriptsize]{100}}
+		  		[C, edge label={node[midway,left,font=\scriptsize]{150}}
+		  			[D, edge label={node[midway,left,font=\scriptsize]{100}}
+		  				[E, edge label={node[midway,right,font=\scriptsize]{50}}
+		  					[A, edge label={node[midway,right,font=\scriptsize]{75}}
+		  					]]]
+		  			[E, edge label={node[midway,right,font=\scriptsize]{125}}
+		  				[D, edge label={node[midway,right,font=\scriptsize]{50}}
+		  					[A, edge label={node[midway,right,font=\scriptsize]{100}}
+		  					]]]
+		  		][D, edge label={node[midway,right,font=\scriptsize]{75	}}
+		  			[C, edge label={node[midway,left,font=\scriptsize]{100}}
+		  				[E, edge label={node[midway,right,font=\scriptsize]{125}}
+		  					[A, edge label={node[midway,right,font=\scriptsize]{75}}
+		  					]]]
+		  			[E, edge label={node[midway,right,font=\scriptsize]{50}}
+		  				[C, edge label={node[midway,right,font=\scriptsize]{125}}
+		  					[A, edge label={node[midway,right,font=\scriptsize]{125}}
+		  					]]]
+		  		][E, edge label={node[midway,right,font=\scriptsize]{125}}
+					[C, edge label={node[midway,left,font=\scriptsize]{125}}
+						[D, edge label={node[midway,right,font=\scriptsize]{100}}
+							[A, edge label={node[midway,right,font=\scriptsize]{100}}
+							]]]
+					[D, edge label={node[midway,right,font=\scriptsize]{50}}
+						[C, edge label={node[midway,right,font=\scriptsize]{100}}
+							[A, edge label={node[midway,right,font=\scriptsize]{125}}
+							]]]  		
+		  		]
+		  	][C][D][E]
+		  ]
+		\end{forest}
+		\caption{旅行商问题状态空间图} \label{Fig:TSP-answer}
+	\end{figure}
 \end{solution}
 
 \begin{question}
 试说明怎样用一棵与或解树来表达图\ref{Fig:elec}所示的电网络阻抗的计算。单独的$R$、$L$或$C$可分别用$R$、$j\omega L$或$1/j\omega C$来计算，这个事实用作本原问题。后继算符应以复合并联和串联阻抗的规则为基础。
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\centering
 		\includegraphics{figures/ques-2.4.pdf}
 		\caption{电网络阻抗计算} \label{Fig:elec}
@@ -122,7 +164,7 @@
 	\begin{figure}[h]
 		\centering
 		\includegraphics{figures/ans-2.8.pdf}
-		\caption{ 语义网络 } \label{Fig:semantic-net}
+		\caption{ 所求语义网络 } \label{Fig:semantic-net}
 	\end{figure}
 \end{solution}
 
